# openmm-custombondplugin

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
openmmapi/include/: OpenMMCustomBond.h
openmmapi/include/openmm/: CustomBondPluginForce.h  CustomBondPluginKernels.h
openmmapi/include/openmm/internal/: CustomBondPluginForceImpl.h  windowsExportCustomBond.h
openmmapi/src/: CustomBondPluginForce.cpp  CustomBondPluginForceImpl.cpp
python/: CMakeLists.txt  custombondplugin.i  setup.py
python/tests/: CMakeLists.txt  TestCustomBondPluginForce.py
serialization/include/openmm/serialization/: CustomBondPluginForceProxy.h
serialization/src/: CustomBondPluginForceProxy.cpp  CustomBondSerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializeCustomBondPluginForce.cpp
tests/: TestCustomBondPluginForce.h
